--- a/style.css
+++ b/style.css
@@ -50,12 +50,71 @@ body{
     color: black;
 }
 .card{
-    grid-template-columns: repeat(5, 1fr);
+    /* grid-template-columns: repeat(5, 1fr); */
+    /* grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); */
     grid-template-rows: repeat(5, 1fr);
-    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    display:flex;
     padding: 40px;
+    display: grid;
+    grid-row-gap: 3px;
+
    
 }
 .under{
     color: white;
+}
+@media (max-width:450px){
+    #box{
+        display: block;
+        position: relative;
+       right: 33px;
+       align-items: center;
+    }
+}
+
+@media(max-width:450px){
+    #pi{
+       width: 280px;
+       height: 200px;
+       background-size: cover;
+
+    }
+}
+@media (max-width:450px) {
+
+    #ht{
+        width: 280px;
+    height:50px ;
+    position: relative;
+   
+   bottom: 45px;
+    
+    }
+    
+}
+@media (max-width:450px) {
+
+    #un{
+        position: relative;
+        bottom: 11px;
+        width: 90px;
+        background-color: black;
+    }
+    
+}
+@media (max-width:450px) {
+
+    #hr{
+       
+       font-size: 25px;
+    }
+    
+}
+@media (max-width:400px){
+    #gt{
+        position: relative;
+        left: 39px;
+        
+    }
 }
